# can-libraries

./: .gitignore  .gitmodules  CMakeLists.txt  INTEGRATION.md  LICENSE  README.md  SUMMARY.md
.github/workflows/: ci.yml
cmake/: CanLibrariesConfig.cmake.in  FindKvaser.cmake  FindPCANBasic.cmake
examples/: CMakeLists.txt  backend_example.cpp  can_example.cpp  combined_example.cpp  dbc_example.cpp
libcan/: CMakeLists.txt
libcan/include/can/: can_errors.h  can_interface.h  can_types.h  frame.h  i_can_backend.h  version.h.in
libcan/src/: can_interface.cpp  i_can_backend.cpp
libcan/src/backends/: kvaser_backend.cpp  kvaser_backend.h  pcan_backend.cpp  pcan_backend.h  socketcan_backend.cpp  socketcan_backend.h
libcan/test/: test_backend.cpp  test_can_interface.cpp  test_socketcan_live.cpp
libdbc/: CMakeLists.txt
libdbc/include/dbc/: dbc_parser.h
libdbc/src/: dbc_parser.cpp
libdbc/test/: test_dbc_parser.cpp
